form elements in place

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "enzyme": "^2.8.2",
-    "react-scripts": "1.0.6",
+    "react-scripts": "2.0.3",
     "react-test-renderer": "^15.5.4"
   },
   "scripts": {
@@ -16,5 +16,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
